--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ async-trait = "0.1"
 futures = "0.3"
 
 # HTTP and networking
+axum = "0.7"
 reqwest = { version = "0.12", features = ["json", "stream", "cookies", "native-tls"] }
 url = "2.5"
 percent-encoding = "2.3"
