feat: Implement chunk-based cache system with database-driven architecture
Complete implementation of the new chunk-based file cache system that replaces
the sequential-only downloader with a priority-aware, database-driven architecture.

Major Changes:
- Implement ChunkManager for coordinating chunk downloads with priority queue
- Implement ChunkDownloader for range-based HTTP downloads
- Implement ChunkStore for sparse file I/O operations
- Refactor CacheProxy to query database for chunk availability
- Remove sequential-only ProgressiveDownloader and CacheStateMachine
- Add comprehensive cache documentation in docs/file-cache.md
- Update README to highlight chunk-based cache features

Key Features:
- 10MB chunks with CRITICAL/HIGH/MEDIUM/LOW priority levels
- Database (cache_chunks table) as single source of truth
- Event-driven waiting for chunks (no polling)
- Fast seeking: 2-6 seconds vs minutes with sequential downloads
- Concurrent downloads (3 simultaneous chunks)
- State survives restarts automatically

GStreamer Integration:
- Fix seeking by using souphttpsrc instead of curlhttpsrc
- Extract sink factory into separate module
- Seeking now works correctly with partial cache

Documentation:
- Add docs/file-cache.md with complete architecture guide
- Update README with cache features and capabilities
- Remove obsolete CACHE_DESIGN.md and CACHE_ARCHITECTURE.md

This resolves the critical seeking issues and enables true progressive
streaming with on-demand chunk downloading.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,12 +44,14 @@ libmpv2-sys = { version = "4.0", optional = true }
 
 # Async runtime
 tokio = { version = "1.47", features = ["full"] }
-tokio-util = { version = "0.7", features = ["rt"] }
+tokio-util = { version = "0.7", features = ["rt", "io"] }
 async-trait = "0.1"
+async-stream = "0.3"
 futures = "0.3"
 
 # HTTP and networking
-axum = "0.7"
+axum = "0.8"
+bytes = "1.10"
 reqwest = { version = "0.12", features = ["json", "stream", "cookies", "native-tls"] }
 url = "2.5"
 percent-encoding = "2.3"
@@ -85,19 +87,20 @@ webp = "0.3"
 base64 = "0.22"
 uuid = { version = "1.18", features = ["v4", "serde"] }
 sha2 = "0.10"
-md5 = "0.7"
+md5 = "0.8"
 lru = "0.16"
 lazy_static = "1.5"
-tantivy = "0.22"
-notify = "7.0"
+tantivy = "0.25"
+notify = "8.2"
 
 # Localization
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 
 [dev-dependencies]
 mockito = "1.7"
-tempfile = "3.22"
+tempfile = "3.23"
 criterion = "0.7"
+tower = "0.5"
 
 [build-dependencies]
 glib-build-tools = { version = "0.21" }
