refactor: Player backend improvements and build configuration updates
- Update .envrc to watch nix configuration files instead of Cargo files
- Clarify feature flags documentation in Cargo.toml
- Disable MPV backend on macOS (has OpenGL rendering issues)
- Force GStreamer as the only backend on macOS
- Update flake.lock dependencies
- Refactor player factory for better platform-specific backend selection
- Improve player state management and error handling
- Fix syntax errors in MPV player (add parentheses around casts before ?)
- Update cache service and storage implementations

--- a/.envrc
+++ b/.envrc
@@ -8,6 +8,5 @@ use flake
 mkdir -p data/cache
 mkdir -p data/config
 
-# Optional: Watch additional files for automatic reload
-watch_file Cargo.toml
-watch_file Cargo.lock
+watch_file nix/devshell.nix
+watch_file nix/packages.nix
