refactor: Improve cache reliability and backend connection handling
Major improvements to cache system with fallback strategies and error recovery:
- Add state machine-based cache fallback (TryCache → RetryDownload → Passthrough)
- Implement automatic chunk recovery for corrupted cache files
- Add disk space monitoring with sysinfo dependency
- Implement cache cleanup worker for proactive space management

Backend connection improvements:
- Add comprehensive logging for Plex connection attempts (local/remote/relay)
- Implement test_connection method for all backends (Plex, Jellyfin, Local)
- Send Plex auth token in both headers and URL params for compatibility
- Add connection type labels in logs (local vs remote vs relay)

UI refactoring:
- Extract worker initialization into separate workers.rs module
- Move main window to module directory structure (main_window/mod.rs)
- Add navigation.rs for future navigation logic extraction

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,7 @@ lru = "0.16"
 lazy_static = "1.5"
 tantivy = "0.25"
 notify = "8.2"
+sysinfo = "0.35"
 
 # Localization
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
