--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ percent-encoding = "2.3"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_urlencoded = "0.7"
 toml = "0.9"
 
 # Database and caching
@@ -105,6 +106,7 @@ mockito = "1.7"
 tempfile = "3.23"
 criterion = "0.7"
 tower = "0.5"
+testcontainers = "0.23"
 
 [build-dependencies]
 glib-build-tools = { version = "0.21" }
