--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,7 @@ lazy_static = "1.5"
 tantivy = "0.25"
 notify = "8.2"
 sysinfo = "0.35"
+self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
 
 # Localization
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
