fix(ci): fetch full git history to extract tag annotations
Add fetch-depth: 0 to actions/checkout to fetch all history and tags.
Without this, tag annotations are not available and the workflow always
falls back to simple commit logs instead of the AI-generated notes.

This was the root cause of v0.7.6 not extracting the release notes from
the tag annotation - the workflow never had access to the full tag object.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history and tags for proper tag annotation extraction
 
       - name: Get version
         id: get_version
