fix: Eliminate all compiler warnings and enforce warnings as errors
- Add [lints.rust] warnings = "deny" to Cargo.toml to treat warnings as errors
- Fix unused struct fields with #[allow(dead_code)] for:
  - MainWindow worker fields (lifecycle management)
  - MpvPlayerInner cache config and GL function fields
  - AuthDialog UI widget fields (GTK callback references)
  - PreferencesDialog and PreferencesPage db fields
  - Cache infrastructure fields in ChunkManager, FileCache, CacheProxy
- Remove truly unused fields from LibraryPage and PlayerPage
- Fix unused enum variants with #[allow(dead_code)] for API completeness:
  - BufferingOverlayInput, WarningSeverity, PerformanceWarning
- Fix macro-generated methods in identifiers.rs
- Remove unused PlaybackSyncWorker last_attempt_times field

This completes task-468: reduced warnings from 85 to 0 (100% reduction).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,6 +122,10 @@ strip = true
 opt-level = 0
 debug = true
 
+# Lint configuration - treat warnings as errors
+[lints.rust]
+warnings = "deny"
+
 # Debian package configuration for cargo-deb
 [package.metadata.deb]
 maintainer = "Alexandre Rosenfeld <alex@rosenfeld.one>"
