refactor: Simplify Flatpak build to GStreamer-only and remove dead code
Flatpak changes:
- Remove MPV and its dependencies (libmpv, luajit, libplacebo) from manifest
- Use only gst-plugin-gtk4 for video playback in Flatpak builds
- Update release workflow to recommend Flatpak as primary distribution
- Add GST_PLUGIN_PATH environment variable for proper plugin discovery

Code cleanup:
- Remove unused filter helper functions (get_active_filter_count,
  get_genre_label, get_year_label, get_rating_label, etc.)
- Remove unused get_filter_suggestions function
- Clean up unused imports and variables across player modules
- Remove dead code in services, workers, and UI components

This significantly reduces the Flatpak bundle complexity while maintaining
full functionality through GStreamer's native GTK4 integration.

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@
 build-dir/
 .flatpak-builder/
 cargo-sources.json
+gst-plugin-gtk4-sources.json
 flatpak-cargo-generator.py
 *.flatpak
 repo/
+.gst-plugins-rs/
 
 # MacOS
 Generated/
